--- a/composer.json
+++ b/composer.json
@@ -1,18 +1,18 @@
 {
-    "name": "qilin/batch-request",
+    "name": "bjm/batch-request",
     "type": "library",
     "license": "MIT",
     "description": "",
     "authors": [
         {
-            "name": "qiLin",
-            "email": "2571714169@qq.com"
+            "name": "bjm0001",
+            "email": "benjamin01@foxmail.com"
         }
     ],
     "require": {},
     "autoload": {
         "psr-4": {
-            "qiLin\\batchRequest\\": "src/"
+            "Bjm\\batchRequest\\": "src/"
         }
     }
 }
