--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "bjm/batch-request",
+    "name": "bjm_pkg/batch-request",
     "type": "library",
     "license": "MIT",
     "description": "",
